[gd_scene load_steps=32 format=3 uid="uid://bgmlveeipn3us"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_wj4kw"]
[ext_resource type="Theme" uid="uid://c1itte14q2giw" path="res://Assets/Themes/run.tres" id="2_bnycp"]
[ext_resource type="Theme" uid="uid://dfqrfq4n7jc1k" path="res://Assets/Themes/panel.tres" id="2_il3fi"]
[ext_resource type="Theme" uid="uid://c574hkl82frai" path="res://Assets/Themes/settings.tres" id="2_t51ww"]
[ext_resource type="Theme" uid="uid://b0e1djv63m3w4" path="res://Assets/Themes/hint.tres" id="3_34ouk"]
[ext_resource type="Theme" uid="uid://bafbc3mdd83w7" path="res://Assets/Themes/delete.tres" id="3_nmjgh"]
[ext_resource type="PackedScene" uid="uid://dw8ifi3mchnka" path="res://Scenes/finish_panel.tscn" id="3_vpoh3"]
[ext_resource type="Theme" uid="uid://cruesesa4586d" path="res://Assets/Themes/rstart.tres" id="4_7agmj"]
[ext_resource type="Theme" uid="uid://dx1ioxxd2ggut" path="res://Assets/Themes/commandsa.tres" id="5_rhb01"]
[ext_resource type="Theme" uid="uid://b8878j7c4k74p" path="res://Assets/Themes/button_skinned.tres" id="7_mfpl1"]
[ext_resource type="Texture2D" uid="uid://d3on7lbuntbmu" path="res://Assets/up.png" id="8_u786a"]
[ext_resource type="Texture2D" uid="uid://dn2r1dr8eh602" path="res://Assets/down.png" id="9_fobfc"]
[ext_resource type="Texture2D" uid="uid://cbndlnq7i2hxw" path="res://Assets/left.png" id="10_13pry"]
[ext_resource type="Texture2D" uid="uid://yvuam5q5opkf" path="res://Assets/right.png" id="11_y04it"]
[ext_resource type="Theme" uid="uid://d4c8p25n5qgpe" path="res://Assets/Themes/confirm.tres" id="12_epkip"]
[ext_resource type="FontFile" uid="uid://dd72mqkn8226f" path="res://Assets/Themes/BitPap.ttf" id="12_k7uda"]
[ext_resource type="Theme" uid="uid://ck8ttdcg0hb14" path="res://Assets/Themes/star_button.tres" id="14_lqupk"]
[ext_resource type="Theme" uid="uid://dpkqcy1nxxi52" path="res://Assets/Themes/hint_panel.tres" id="18_3vb4p"]
[ext_resource type="PackedScene" uid="uid://bsdh4j0hu4e8u" path="res://Scenes/rating.tscn" id="18_oc4yq"]
[ext_resource type="AudioStream" uid="uid://bats1vdai7pbs" path="res://Assets/Audio/select_007.ogg" id="19_q017p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74453"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wra3l"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7p7v"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_wd6sn"]
number_color = Color(0.980392, 0.694118, 0.235294, 1)
symbol_color = Color(0.619608, 0.545098, 0.572549, 1)
function_color = Color(1, 1, 1, 1)
member_variable_color = Color(0.180392, 0.658824, 0.411765, 1)
keyword_colors = {
"abajo": Color(0.819608, 0.737255, 0.721569, 1),
"arriba": Color(0.819608, 0.737255, 0.721569, 1),
"def": Color(0.870588, 0.356863, 0.278431, 1),
"der": Color(0.819608, 0.737255, 0.721569, 1),
"func1": Color(0.207843, 0.560784, 0.690196, 1),
"func2": Color(0.207843, 0.560784, 0.690196, 1),
"func3": Color(0.207843, 0.560784, 0.690196, 1),
"func4": Color(0.207843, 0.560784, 0.690196, 1),
"func5": Color(0.207843, 0.560784, 0.690196, 1),
"izq": Color(0.819608, 0.737255, 0.721569, 1),
"repetir": Color(0.811765, 0.235294, 0.541176, 1)
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5liw"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4bme4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8c3go"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujbh0"]

[sub_resource type="Animation" id="Animation_0d5pl"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b8nlm"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jf34e"]
_data = {
"fade_in": SubResource("Animation_0d5pl"),
"fade_out": SubResource("Animation_b8nlm")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wj4kw")

[node name="Console" type="Control" parent="."]
anchors_preset = 0
offset_top = 736.0
offset_right = 712.0
offset_bottom = 1256.0

[node name="ConsoleBG" type="Panel" parent="Console"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 51.0
offset_right = 462.0
offset_bottom = 544.0
theme = ExtResource("2_il3fi")

[node name="ConsoleText" type="Label" parent="Console/ConsoleBG"]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 40

[node name="TextEdit" type="CodeEdit" parent="Console/ConsoleBG"]
layout_mode = 0
offset_left = 42.0
offset_top = 45.0
offset_right = 426.0
offset_bottom = 477.0
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/caret_color = Color(1, 1, 1, 1)
theme_override_colors/line_number_color = Color(0.3795, 0.55, 0.407917, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_74453")
theme_override_styles/focus = SubResource("StyleBoxFlat_wra3l")
theme_override_styles/read_only = SubResource("StyleBoxFlat_l7p7v")
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
caret_draw_when_editable_disabled = true
caret_move_on_right_click = false
caret_multiple = false
syntax_highlighter = SubResource("CodeHighlighter_wd6sn")
highlight_all_occurrences = true
gutters_draw_line_numbers = true

[node name="Edit" type="Control" parent="Console"]
anchors_preset = 0
offset_left = 344.0
offset_top = 25.0
offset_right = 734.0
offset_bottom = 122.0

[node name="run" type="Button" parent="Console/Edit"]
texture_filter = 1
layout_mode = 0
offset_left = 38.0
offset_top = -6.0
offset_right = 134.0
offset_bottom = 90.0
theme = ExtResource("2_bnycp")

[node name="delete" type="Button" parent="Console/Edit"]
texture_filter = 1
layout_mode = 0
offset_left = 150.0
offset_top = -6.0
offset_right = 246.0
offset_bottom = 90.0
theme = ExtResource("3_nmjgh")

[node name="restart" type="Button" parent="Console/Edit"]
texture_filter = 1
layout_mode = 0
offset_left = 262.0
offset_top = -6.0
offset_right = 358.0
offset_bottom = 90.0
theme = ExtResource("4_7agmj")

[node name="ScrollContainer" type="ScrollContainer" parent="Console"]
layout_mode = 0
offset_left = 464.0
offset_top = 120.0
offset_right = 720.0
offset_bottom = 928.0
horizontal_scroll_mode = 0

[node name="Commands" type="VBoxContainer" parent="Console/ScrollContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="moverDer()" type="Button" parent="Console/ScrollContainer/Commands"]
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "moverDer()"

[node name="moverIzq()" type="Button" parent="Console/ScrollContainer/Commands"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "moverIzq()"

[node name="saltar()" type="Button" parent="Console/ScrollContainer/Commands"]
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "saltar()"

[node name="PopupPanel" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(212, 50)
theme_override_styles/panel = SubResource("StyleBoxFlat_e5liw")

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/PopupPanel"]
texture_filter = 1
custom_minimum_size = Vector2(0, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 212.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="saltar(arriba)" type="Button" parent="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_mfpl1")
theme_override_font_sizes/font_size = 30
icon = ExtResource("8_u786a")
icon_alignment = 1
expand_icon = true

[node name="saltar(abajo)" type="Button" parent="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme = ExtResource("7_mfpl1")
theme_override_font_sizes/font_size = 30
icon = ExtResource("9_fobfc")
icon_alignment = 1
expand_icon = true

[node name="saltar(izq)" type="Button" parent="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("7_mfpl1")
icon = ExtResource("10_13pry")
icon_alignment = 1
expand_icon = true

[node name="saltar(der)" type="Button" parent="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("7_mfpl1")
icon = ExtResource("11_y04it")
icon_alignment = 1
expand_icon = true

[node name="siLoop" type="Button" parent="Console/ScrollContainer/Commands"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "si (...)"

[node name="si_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(369, 100)
visible = true
theme_override_styles/panel = SubResource("StyleBoxEmpty_4bme4")

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/si_popup"]
offset_right = 369.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="Console/ScrollContainer/Commands/si_popup/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Si el color "

[node name="equalButton" type="Button" parent="Console/ScrollContainer/Commands/si_popup/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "=="

[node name="colorButton" type="Button" parent="Console/ScrollContainer/Commands/si_popup/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "(...)"

[node name="confirmButton" type="Button" parent="Console/ScrollContainer/Commands/si_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("12_epkip")

[node name="color_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(268, 100)
theme_override_styles/panel = SubResource("StyleBoxEmpty_8c3go")

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/color_popup"]
texture_filter = 1
offset_right = 268.0
offset_bottom = 100.0

[node name="rojo" type="Button" parent="Console/ScrollContainer/Commands/color_popup/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "rojo"

[node name="verde" type="Button" parent="Console/ScrollContainer/Commands/color_popup/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "verde"

[node name="azul" type="Button" parent="Console/ScrollContainer/Commands/color_popup/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "azul"

[node name="equal_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_ujbh0")

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/equal_popup"]
offset_right = 100.0
offset_bottom = 100.0

[node name="equal" type="Button" parent="Console/ScrollContainer/Commands/equal_popup/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "=="

[node name="not_equal" type="Button" parent="Console/ScrollContainer/Commands/equal_popup/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "!="

[node name="tomarLlave()" type="Button" parent="Console/ScrollContainer/Commands"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "tomarLlave()"

[node name="utilizarLlave()" type="Button" parent="Console/ScrollContainer/Commands"]
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "utilizarLlave()"

[node name="repetir(#)" type="Button" parent="Console/ScrollContainer/Commands"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "repetir(#)"

[node name="repetir_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(356, 53)

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/repetir_popup"]
texture_filter = 1
custom_minimum_size = Vector2(0, 30)
offset_left = 4.0
offset_top = 4.0
offset_right = 352.0
offset_bottom = 49.0

[node name="reps_2" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "2"

[node name="reps_3" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "3"

[node name="reps_4" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="reps_5" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="reps_6" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "6"

[node name="reps_7" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "7"

[node name="reps_8" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "8"

[node name="reps_9" type="Button" parent="Console/ScrollContainer/Commands/repetir_popup/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "9"

[node name="funcionCrear" type="Button" parent="Console/ScrollContainer/Commands"]
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "def func#():  ..."

[node name="func1_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(224, 53)

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/func1_popup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 49.0

[node name="crear1" type="Button" parent="Console/ScrollContainer/Commands/func1_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "1"

[node name="crear2" type="Button" parent="Console/ScrollContainer/Commands/func1_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "2"

[node name="crear3" type="Button" parent="Console/ScrollContainer/Commands/func1_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "3"

[node name="crear4" type="Button" parent="Console/ScrollContainer/Commands/func1_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="crear5" type="Button" parent="Console/ScrollContainer/Commands/func1_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="funcionUsar" type="Button" parent="Console/ScrollContainer/Commands"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
disabled = true
text = "func#()"

[node name="func2_popup" type="PopupPanel" parent="Console/ScrollContainer/Commands"]
size = Vector2i(224, 53)

[node name="HBoxContainer" type="HBoxContainer" parent="Console/ScrollContainer/Commands/func2_popup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 49.0

[node name="usar1" type="Button" parent="Console/ScrollContainer/Commands/func2_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "1"

[node name="usar2" type="Button" parent="Console/ScrollContainer/Commands/func2_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "2"

[node name="usar3" type="Button" parent="Console/ScrollContainer/Commands/func2_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "3"

[node name="usar4" type="Button" parent="Console/ScrollContainer/Commands/func2_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="usar5" type="Button" parent="Console/ScrollContainer/Commands/func2_popup/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="Options" type="Control" parent="."]
anchors_preset = 0
offset_left = 548.0
offset_right = 720.0
offset_bottom = 67.0

[node name="settings" type="Button" parent="Options"]
texture_filter = 1
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 156.0
offset_bottom = 112.0
theme = ExtResource("2_t51ww")

[node name="hint" type="Button" parent="Options"]
texture_filter = 1
layout_mode = 0
offset_left = -52.0
offset_top = 16.0
offset_right = 44.0
offset_bottom = 112.0
theme = ExtResource("3_34ouk")
text = "
"

[node name="stars" type="Button" parent="Options"]
texture_filter = 1
layout_mode = 0
offset_left = -164.0
offset_top = 16.0
offset_right = -68.0
offset_bottom = 112.0
theme = ExtResource("14_lqupk")

[node name="Finish_Panel" parent="." instance=ExtResource("3_vpoh3")]
visible = false
layout_mode = 1

[node name="Volume" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Volume"]
texture_filter = 1
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 648.0
offset_bottom = 680.0
theme = ExtResource("18_3vb4p")

[node name="MarginContainer" type="MarginContainer" parent="Volume/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Volume/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="main_menu" type="Button" parent="Volume/Panel/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("5_rhb01")
theme_override_font_sizes/font_size = 40
text = "Menu Principal"

[node name="Label" type="Label" parent="Volume/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_k7uda")
theme_override_font_sizes/font_size = 45
text = "Sonido:
"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Volume/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="Master" type="Label" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_k7uda")
theme_override_font_sizes/font_size = 30
text = "Master:"

[node name="MasterSlider" type="HSlider" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="Label" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_k7uda")
theme_override_font_sizes/font_size = 30
text = "Música:"

[node name="MusicSlider" type="HSlider" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = 0.01
max_value = 1.0
step = 0.05
value = 0.86

[node name="SFX" type="Label" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_k7uda")
theme_override_font_sizes/font_size = 30
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Volume/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = 0.01
max_value = 1.0
step = 0.05
value = 1.0

[node name="Rating" parent="." instance=ExtResource("18_oc4yq")]
visible = false

[node name="sfx_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_q017p")
bus = &"SFX"

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jf34e")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 1)

[connection signal="gui_input" from="Console/ConsoleBG/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="pressed" from="Console/Edit/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Console/Edit/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Console/Edit/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/moverDer()" to="." method="_on_move_right_button_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/moverIzq()" to="." method="_on_move_left_button_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/saltar()" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer/saltar(arriba)" to="." method="_on_jump_up_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer/saltar(abajo)" to="." method="_on_jump_down_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer/saltar(izq)" to="." method="_on_jump_left_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/PopupPanel/HBoxContainer/saltar(der)" to="." method="_on_jump_right_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/tomarLlave()" to="." method="_on_pick_up_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/utilizarLlave()" to="." method="_on_utilizar_llave_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/repetir(#)" to="." method="_on_repetir_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/funcionCrear" to="." method="_on_funcion_crear_pressed"]
[connection signal="pressed" from="Console/ScrollContainer/Commands/funcionUsar" to="." method="_on_funcion_usar_pressed"]
[connection signal="pressed" from="Options/settings" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Options/hint" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="Options/stars" to="." method="_on_stars_pressed"]
[connection signal="pressed" from="Volume/Panel/MarginContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Volume/Panel/MarginContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Volume/Panel/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Volume/Panel/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
